test/compile_fail/retired_mergerowspecs_fails.zig
const shift = @import("shift");

comptime {
    _ = shift.handlers;
}
